--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
     font-size: 16px;
 }
 .navbar-brand,
-.navbar-nav .nav-link {
+.navbar-nav .nav-link,
+.navbar .font{
     color: white;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
 }
@@ -54,8 +55,9 @@
     border-radius: 15px;
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.7);
 }
-.info-panel .material-icons {
+.info-panel .font {
     margin-bottom: 20px;
+    margin-right: 15px;
 }
 .info-panel .col-lg {
     padding: 15px;
